[package]
name = "vision_postprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "1.0.4", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
deadpool-redis = "0.23.0"
rayon = "1.11.0"
